Fixed scrollbar issues in homepage

--- a/Frontend/Website/Vote-Vault-Website/src/app/home-page/home-page.component.css
+++ b/Frontend/Website/Vote-Vault-Website/src/app/home-page/home-page.component.css
@@ -36,7 +36,7 @@
   border-radius: 15px;
   border: 5px solid black;
   position: relative;
-  width: 53%;
+  width: 47.5%;
   height: 60%;
   left: 50%;
 }
